[package]
name = "merkle-authgc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6"
digest = "0.10"

[dependencies.ct-merkle]
#version = "0.1"
git = "ssh://git@github.com/rozbb/ct-merkle.git"
branch = "batch-inclusion"
#rev = "f987a28bcf6686f180fe854ef4daec43e581a991"

[dev-dependencies]
blake2 = "0.10"
rand = "0.8"
winter-crypto = "0.4"
winter-math = "0.4"
