[package]
name = "merkle-authgc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6"
digest = "0.10"
serde = "1"

[dependencies.ct-merkle]
#version = "0.1"
git = "ssh://git@github.com/rozbb/ct-merkle.git"
features = ["serde"]
rev = "a95a54d62a21db0c5a9efa76dabfb5d85eb3fbcd"

[dev-dependencies]
blake2 = "0.10"
rand = "0.8"
