[package]
name = "merkle-authgc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = "0.6"
digest = "0.10"
serde = "1"

[dependencies.ct-merkle]
#version = "0.1"
git = "ssh://git@github.com/rozbb/ct-merkle.git"
features = ["serde"]
rev = "a800628cce4e6396b5aea23a6a106c0413b225ca"

[dev-dependencies]
blake2 = "0.10"
rand = "0.8"
